@@ -130,3 +130,6 @@ NOTICE:  The rasters are aligned
 NOTICE:  The rasters are aligned
 NOTICE:  The rasters are aligned
 t|f|t
+1|0|0|500|500|1|-1|0|0|0|1
+2|0|0|500|100|1|-1|0|0|0|1
+3|0|0|250|900|1|-1|0|0|0|1
