@@ -56,6 +56,7 @@ PostGIS 2.1.0
   - #739, UpdateRasterSRID()
   - #1895, new r-tree node splitting algorithm (Alex Korotkov)
   - #1709, ST_NotSameAlignmentReason(raster, raster)
+  - #1293, ST_Resize(raster) to resize rasters based upon width/height
 
 * Enhancements *
   - #823,  tiger geocoder: Make loader_generate_script download portion 
